--- a/src/app/task/task-list/task-list.component.scss
+++ b/src/app/task/task-list/task-list.component.scss
@@ -20,3 +20,11 @@
 mat-divider {
   border-color: gainsboro; 
 }
+
+.empty-message {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
